@@ -13,7 +13,6 @@ class MathTests extends PHPUnit_Framework_TestCase {
     public function setUp()
     {
         $this->smarty = SmartyTests::$smarty;
-        $this->smarty->disableSecurity();
         SmartyTests::init();
     } 
 
